fix: change homepage to index.md

--- a/index.html
+++ b/index.html
@@ -36,6 +36,7 @@
       window.$docsify = {
         name: "Docsify Test",
         repo: "https://github.com/neontuts/docsify-test/",
+        homepage: "index.md",
         relativePath: true,
         executeScript: true,
       };
