feat: add docsify search

--- a/index.html
+++ b/index.html
@@ -39,10 +39,20 @@
         homepage: "index.md",
         relativePath: true,
         executeScript: true,
+        search: "auto",
+        search: {
+          maxAge: 86400000,
+          paths: "auto",
+          placeholder: "Search",
+          noData: "No Results found!",
+          depth: 6,
+          hideOtherSidebarContent: false,
+        },
       };
     </script>
     <!-- Docsify v4 -->
     <script src="//cdn.jsdelivr.net/npm/docsify@4"></script>
     <script src="//cdn.jsdelivr.net/npm/vue@2/dist/vue.min.js"></script>
+    <script src="//cdn.jsdelivr.net/npm/docsify/lib/plugins/search.min.js"></script>
   </body>
 </html>
