fix sidebar issue

--- a/index.html
+++ b/index.html
@@ -50,6 +50,26 @@
         },
       };
     </script>
+        <script>
+      window.$docsify = {
+        name: "Open Source With Pradumna",
+        repo: 'pradumnasaraf/open-source-with-pradumna',
+        themeColor: '#FF6863',
+        loadSidebar: '_layouts/sidebar.md',
+        loadNavbar: '_layouts/navbar.md',
+        relativePath: true,
+        subMaxLevel: 3,
+        search: "auto",
+        search: {
+          maxAge: 86400000,
+          paths: "auto",
+          placeholder: "Search",
+          noData: "No Results found!",
+          depth: 6,
+          hideOtherSidebarContent: false,
+        },
+      };
+    </script>
     <!-- Docsify v4 -->
     <script src="//cdn.jsdelivr.net/npm/docsify@4"></script>
     <script src="//cdn.jsdelivr.net/npm/vue@2/dist/vue.min.js"></script>
