--- a/index.html
+++ b/index.html
@@ -34,31 +34,14 @@
     <div id="app"></div>
     <script>
       window.$docsify = {
-        name: "Docsify Test",
-        repo: "https://github.com/neontuts/docsify-test/",
-        homepage: "index.md",
-        relativePath: true,
-        executeScript: true,
-        search: "auto",
-        search: {
-          maxAge: 86400000,
-          paths: "auto",
-          placeholder: "Search",
-          noData: "No Results found!",
-          depth: 6,
-          hideOtherSidebarContent: false,
-        },
-      };
-    </script>
-        <script>
-      window.$docsify = {
-        name: "Open Source With Pradumna",
-        repo: 'pradumnasaraf/open-source-with-pradumna',
+        name: "Journey Book",
+        repo: 'Adarsh-jaiss/journey-book',
         themeColor: '#FF6863',
         loadSidebar: '_layouts/sidebar.md',
         loadNavbar: '_layouts/navbar.md',
+        homepage: "index.md",
         relativePath: true,
-        subMaxLevel: 3,
+        executeScript: true,
         search: "auto",
         search: {
           maxAge: 86400000,
