update project description, repo link

--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge,chrome=1" />
     <meta
       name="description"
-      content="Test out using the docsify platform, which auto-generates a documentation site based on markdown files."
+      content="Folks are welcome to share about themselves, even an small introduction is appreciated. We are working on its website :)"
     />
     <meta
       name="viewport"
@@ -35,7 +35,7 @@
     <script>
       window.$docsify = {
         name: "Journey Book",
-        repo: 'Adarsh-jaiss/journey-book',
+        repo: 'collab-community/journey-book',
         themeColor: '#FF6863',
         loadSidebar: '_layouts/sidebar.md',
         loadNavbar: '_layouts/navbar.md',
