--- a/index.html
+++ b/index.html
@@ -35,10 +35,10 @@
     <script>
       window.$docsify = {
         name: "Journey Book",
-        repo: 'collab-community/journey-book',
-        themeColor: '#FF6863',
-        loadSidebar: '_layouts/sidebar.md',
-        loadNavbar: '_layouts/navbar.md',
+        repo: "collab-community/journey-book",
+        themeColor: "#FF6863",
+        loadSidebar: "_layouts/sidebar.md",
+        loadNavbar: "_layouts/navbar.md",
         homepage: "index.md",
         relativePath: true,
         executeScript: true,
@@ -50,6 +50,34 @@
           noData: "No Results found!",
           depth: 6,
           hideOtherSidebarContent: false,
+        },
+        vueGlobalOptions: {
+          data() {
+            return {
+              users: null,
+            };
+          },
+          created() {
+            const sortUsers = (users) => {
+              const sortedUsers = users.sort((a, b) => {
+                const nameA = a.name.toUpperCase();
+                const nameB = b.name.toUpperCase();
+                if (nameA < nameB) {
+                  return -1;
+                }
+                if (nameA > nameB) {
+                  return 1;
+                }
+                return 0;
+              });
+              return sortedUsers;
+            };
+
+            fetch("Data.json")
+              .then((response) => response.json())
+              .then((data) => (this.users = sortUsers(data)))
+              .catch((err) => console.log(err));
+          },
         },
       };
     </script>
